; ModuleID = '/home/carl/AnghaBench/redis/src/extr_cluster.c_verifyDumpPayload.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_cluster.c_verifyDumpPayload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@C_ERR = common dso_local global i32 0, align 4
@RDB_VERSION = common dso_local global i8 0, align 1
@C_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @verifyDumpPayload(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8, align 1
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp ult i64 %9, 10
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @C_ERR, align 4
  store i32 %12, i32* %3, align 4
  br label %52

13:                                               ; preds = %2
  %14 = load i8*, i8** %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = sub i64 %15, 10
  %17 = getelementptr inbounds i8, i8* %14, i64 %16
  store i8* %17, i8** %6, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 1
  %20 = load i8, i8* %19, align 1
  %21 = zext i8 %20 to i32
  %22 = shl i32 %21, 8
  %23 = load i8*, i8** %6, align 8
  %24 = getelementptr inbounds i8, i8* %23, i64 0
  %25 = load i8, i8* %24, align 1
  %26 = zext i8 %25 to i32
  %27 = or i32 %22, %26
  %28 = trunc i32 %27 to i8
  store i8 %28, i8* %7, align 1
  %29 = load i8, i8* %7, align 1
  %30 = zext i8 %29 to i32
  %31 = load i8, i8* @RDB_VERSION, align 1
  %32 = zext i8 %31 to i32
  %33 = icmp sgt i32 %30, %32
  br i1 %33, label %34, label %36

34:                                               ; preds = %13
  %35 = load i32, i32* @C_ERR, align 4
  store i32 %35, i32* %3, align 4
  br label %52

36:                                               ; preds = %13
  %37 = load i8*, i8** %4, align 8
  %38 = load i64, i64* %5, align 8
  %39 = sub i64 %38, 8
  %40 = call i32 @crc64(i32 0, i8* %37, i64 %39)
  store i32 %40, i32* %8, align 4
  %41 = call i32 @memrev64ifbe(i32* %8)
  %42 = load i8*, i8** %6, align 8
  %43 = getelementptr inbounds i8, i8* %42, i64 2
  %44 = call i64 @memcmp(i32* %8, i8* %43, i32 8)
  %45 = icmp eq i64 %44, 0
  br i1 %45, label %46, label %48

46:                                               ; preds = %36
  %47 = load i32, i32* @C_OK, align 4
  br label %50

48:                                               ; preds = %36
  %49 = load i32, i32* @C_ERR, align 4
  br label %50

50:                                               ; preds = %48, %46
  %51 = phi i32 [ %47, %46 ], [ %49, %48 ]
  store i32 %51, i32* %3, align 4
  br label %52

52:                                               ; preds = %50, %34, %11
  %53 = load i32, i32* %3, align 4
  ret i32 %53
}

declare dso_local i32 @crc64(i32, i8*, i64) #1

declare dso_local i32 @memrev64ifbe(i32*) #1

declare dso_local i64 @memcmp(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
